--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h2  id="good"  class="goodd"></h2>
         </div>
         <div class="todo">
-            <h2>Todo aps</h2>
+            <h2>Create Task</h2>
             <div class="card">
                 <input id="boxInput" type="text" placeholder="add todo">
                 <button onclick="addTodo()">add</button>
