--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
             <div class="reset-btn" onclick="clearAll()">
             </div>
         </div>
+        <footer>
+            <hr>
+            <p>
+                &copy; 2025 Indrawan. All Rights Reserved.
+            </p>
+        </footer>
     </div>
     <script src="main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
