--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <img src="images/moon.png" alt="" id="icon">
         <div class="cursor"></div>
         <div>
             <h1 id="time">template jam waktu sistem</h1>
